<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="4">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/grey_light"
        android:gravity="bottom"
        android:paddingStart="@dimen/default_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:padding="@dimen/default_padding_small"
            android:src="@drawable/avatar_placeholder"
            app:civ_border_color="@color/transparent"
            app:civ_border_width="0.5dp" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivAvatar"
            android:padding="@dimen/default_padding_small"
            android:text="@string/username"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUsername"
            android:paddingBottom="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding_small"
            android:text="@string/email"
            android:textColor="@android:color/darker_gray" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:orientation="vertical">

        <sg.vinova.besttrip.widgets.BTextView
            android:id="@+id/tvHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding_bigger"
            android:text="@string/home"
            android:textSize="24sp"
            app:bBackground="@color/background"
            app:bFontColor="@color/white"
            app:bTextAlign="Left" />

        <TextView
            android:id="@+id/tvListTaxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding_bigger"
            android:text="@string/taxi_fare_charges"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding_bigger"
            android:text="@string/logout"
            android:textColor="@color/red_dark"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/default_padding"
        android:text="@string/app_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp" />


</LinearLayout>