<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/default_padding_large"
    android:background="@drawable/bg_b_button"
    android:paddingStart="@dimen/default_padding_large">

    <sg.vinova.besttrip.widgets.BTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_bigger"
        android:text="@string/title"
        android:textSize="@dimen/default_text_size_large"
        app:bFont="RobotoBold"
        app:bFontColor="@color/dark_background" />

    <sg.vinova.besttrip.widgets.BTextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginBottom="@dimen/default_padding_large"
        android:layout_marginTop="@dimen/default_padding_large"
        android:text="@string/message"
        app:bFontColor="@color/background" />

    <sg.vinova.besttrip.widgets.BButton
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMessage"
        android:layout_marginBottom="@dimen/default_padding_bigger"
        android:text="@string/ok"
        app:bBackground="@drawable/bg_b_button_dark" />

</RelativeLayout>
