<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include
        layout="@layout/view_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding_xxx"
        android:layout_marginTop="@dimen/default_padding_xxx"
        android:gravity="center"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_background"
        android:orientation="vertical">

        <include
            layout="@layout/view_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_padding_big"
            android:layout_marginEnd="@dimen/default_padding_large"
            android:layout_marginStart="@dimen/default_padding_large"
            android:background="@drawable/bg_b_edit_text"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUsername"
                style="@style/BEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_login_views_height"
                android:drawablePadding="@dimen/default_padding"
                android:drawableStart="@drawable/user_off"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:textSize="@dimen/default_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_light" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/BEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_login_views_height"
                android:drawablePadding="@dimen/default_padding"
                android:drawableStart="@drawable/mail_off"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:textSize="@dimen/default_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_light" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/BEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_login_views_height"
                android:drawablePadding="@dimen/default_padding"
                android:drawableStart="@drawable/password_off"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:textSize="@dimen/default_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_text_size_xxx_large"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/default_padding_large"
            android:paddingStart="@dimen/default_padding_large">

            <ImageView
                android:layout_width="@dimen/default_login_views_height"
                android:layout_height="@dimen/default_login_views_height"
                android:layout_marginEnd="@dimen/default_padding_small"
                android:background="@drawable/bg_b_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/default_padding_bigger"
                android:src="@drawable/fb" />

            <Button
                android:id="@+id/btnSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_login_views_height"
                android:background="@drawable/bg_b_button"
                android:text="@string/sign_up_with_email"
                android:textColor="@color/background" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
